Fixed MH3 price totaling and MH3 card spacing

--- a/src/input.css
+++ b/src/input.css
@@ -359,7 +359,6 @@ input:checked + .slider:before {
 }
 
 .card-face {
-    width: 240px;
     position: absolute;
     backface-visibility: hidden;
 }
