--- a/src/output.css
+++ b/src/output.css
@@ -47,7 +47,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-500: oklch(63.7% 0.237 25.331);
     --color-emerald-500: oklch(69.6% 0.17 162.48);
     --color-cyan-950: oklch(30.2% 0.056 229.695);
     --color-rose-500: oklch(64.5% 0.246 16.439);
@@ -279,6 +278,9 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
+  .mb-12 {
+    margin-bottom: calc(var(--spacing) * 12);
+  }
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
@@ -311,9 +313,6 @@
   }
   .min-w-\[350px\] {
     min-width: 350px;
-  }
-  .min-w-\[512px\] {
-    min-width: 512px;
   }
   .shrink-0 {
     flex-shrink: 0;
@@ -460,13 +459,6 @@
   .ring-2 {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .ring-4 {
-    --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentColor);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .ring-red-500 {
-    --tw-ring-color: var(--color-red-500);
   }
   .ring-white {
     --tw-ring-color: var(--color-white);
@@ -818,7 +810,6 @@ input:checked + .slider:before {
   }
 }
 .card-face {
-  width: 240px;
   position: absolute;
   backface-visibility: hidden;
 }
